--- a/HOME.HTML
+++ b/HOME.HTML
@@ -1,7 +1,32 @@
 <!DOCTYPE html>
-<html>
-<title> THIS IS MY FIRST WEB PAGE</title>
-<h1> My name is Immaculate</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+   <h1> my website</h1> 
+   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi maxime explicabo laborum, ut quia obcaecati nisi aliquid cumque reprehenderit odit totam libero et nulla id mollitia recusandae soluta quasi. Fugiat.
+    <hr>
+    <ul>
 
+<li>lucy</li>
+<li>lucy</li>
+<li>lucy</li>
+    </ul>
+   <!--my form--> 
+<form action="">
 
+    <h3>Send us a message</h3>
+    <label for="First name"> First Name</label><br>
+    <input type="text"><br>
+    <label for="Last name"> last Name</label><br>
+    <input type="text"><br>
+    <br>
+    <button type="submit">SUBMIT</button><br>
+</form>
+
+   
+</body>
 </html>
