--- a/Profile.HTML
+++ b/Profile.HTML
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
 <title>Immaculate's Profile</title>
-<H1>AINOMUGISHA IMMACULATE</H1>
+<head>
+
+    <link rel="stylesheet" href="style.css">
+</head>
+<h1 class="mainheading">AINOMUGISHA IMMACULATE</h1>
 <img src="immy.jpg" width="250" height="250">
 <h2>Immaculate Holds a Bachelors Degree of Computer engineering from Busitema University.<br> She holds a post graduate diploma in instructors Technical Teacher Education from Kyambogo</h2>
-<p>
-    <h2>Follow me</h2>
+<p class="firstparagraph">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, corrupti, sapiente dolorum in voluptas, modi vero quo fugit eos expedita quae. Eaque quae nobis blanditiis doloremque amet consequuntur aut a.
+    <h2 id="this">Follow me</h2>
      <a href="https://www.linkedin.com/in/immaculate-ainomugisha-b7abab146/">LinkedIn</a>
       
+</p>
+<p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, eaque vitae. Voluptate, corporis ipsam similique maiores sint libero quaerat provident, commodi natus vero quisquam deleniti velit sunt praesentium! Veritatis, debitis.
 </p>
 
 </html>
