--- a/twitterlog.html
+++ b/twitterlog.html
@@ -15,13 +15,13 @@
     </div>
     <div class="white">
         <img src="XLOG.JPG" alt="" class="Xlogo">
-       <h1 class="heading" > Sign in to X</h1>
+       <h2 class="heading" > Sign in to X</h1>
     <form action="">
 <input type="text" placeholder="sign in as e.g immacimmix2@gmail.com" class="signin"><br>
-<br><input type="button" value="sign in with apple" class="fat"><br>
+<br><input type="button" value="Sign in with apple" class="fat"><br>
 
 <br><input type="text" placeholder="User" class="fat" phonenumber, Email> <br>
-<br><button  background-color= "black"class="fat">Next</button><br>
+<br><button class="fat" style="background-color: rgb(172, 154, 154);">Next</button><br>
 <br><button class="fat">Forgot password</button><br>
 <br><p>Don't have an account? <a href="#">Sign up</a></p>
     </form>
